2009-03-03  Jungshik Shin  <jshin@chromium.org>

        Reviewed by Eric Seidel.

        http://bugs.webkit.org/show_bug.cgi?id=23028
        Enable dynamic web font support to Chromium on Windows: Part 1
        - Move OpenTypeUtilities.{cpp,h} to platform/graphics/opentype
          from platform/graphics/win because both Windows port and Chromium Windows
          port will use them.
        - Adjust WebCore.vcproj accordingly.

        * WebCore.vcproj/WebCore.vcproj:
        * platform/graphics/opentype: Added.
        * platform/graphics/opentype/OpenTypeUtilities.cpp: Copied from WebCore/platform/graphics/win/OpenTypeUtilities.cpp.
        * platform/graphics/opentype/OpenTypeUtilities.h: Copied from WebCore/platform/graphics/win/OpenTypeUtilities.h.
        * platform/graphics/win/OpenTypeUtilities.cpp: Removed.
        * platform/graphics/win/OpenTypeUtilities.h: Removed.

2009-03-03  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=24312
        
        Take 3D transforms into account when hit testing:
        
        1. Maintain a bit on each RenderLayer that is set when the layer
           has 3d descendants, so that we know when to fall into the slow
           hit testing path.
           
        2. Make a ref-counted HitTestingTransformState, which is used to store
           an accumulated transform, and the hit test point, and hitTestRect
           in the plane of the ancestor non-3d ('flattening') layer.
           
           It's ref-counted so we can heap allocate it (to avoid stack bloat),
           and avoid copying when hitTestLayer calls itself after applying the transform.
           
        3. Add logic to hitTestLayer to depth-test just direct descendants, if any have
           3D transforms, or to do deep depth-testing when traversing a preserves-3d
           hierarchy. When hit, layers compute a z-offset from the ancestor flattening